add tf generation step

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
+# unused kubeone config file
+/terraform/kubeone.yaml
+
 # OS images
 *.ova
 
