--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ ssh_key_id_rsa.pub
 
 # exclude terraform output.json (as it might contain sensitive information)
 /terraform/output.json
+# exclude machinedeployment (as it might contain sensitive information)
+/machines/kubeone-worker-pool.yml
+
+# kubeconfig
+/kubeone-kubeconfig
+/kubeconfig
