add control-plane toleration to csi-controller

--- a/addons/csi-vmware-cloud-director/csi-controller.yaml
+++ b/addons/csi-vmware-cloud-director/csi-controller.yaml
@@ -106,6 +106,10 @@ spec:
     spec:
       serviceAccount: csi-vcd-controller-sa
       dnsPolicy: Default
+      tolerations:
+      - key: "node-role.kubernetes.io/control-plane"
+        operator: "Exists"
+        effect: "NoSchedule"
       containers:
         - name: csi-attacher
           image: {{ .InternalImages.Get "VMwareCloudDirectorCSIAttacher" }}
