fix output struct, disable kubeProxy

--- a/kubeone.yaml
+++ b/kubeone.yaml
@@ -12,6 +12,8 @@ containerRuntime:
   containerd: {}
 
 clusterNetwork:
+  kubeProxy:
+    skipInstallation: true
   cni:
     cilium:
       kubeProxyReplacement: strict
