--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -40,7 +40,7 @@ jobs:
       uses: webfactory/ssh-agent@v0.7.0
       if: github.ref == 'refs/heads/master'
       with:
-        ssh-private-key: ${{ secrets.TF_SSHKEY }}
+        ssh-private-key: ${{ secrets.SSHKEY }}
 
     - name: Setup Terraform CLI
       uses: hashicorp/setup-terraform@v2
