--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,7 +27,7 @@ jobs:
         CREDENTIALS: ${{ secrets.CREDENTIALS }}
         SSHKEY: ${{ secrets.SSHKEY }}
         SSHKEY_PUB: ${{ secrets.SSHKEY_PUB }}
-      run:
+      run: |
         echo "${TF_OVERRIDE}" > terraform/override.tf
         echo "${TF_TFVARS}" > terraform/terraform.tfvars
         echo "${CREDENTIALS}" > credentials.yaml
@@ -48,6 +48,15 @@ jobs:
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
         terraform_version: ~1.2.8
+
+    - name: Setup other tooling
+      run: |
+        curl -LO "https://github.com/kubermatic/kubeone/releases/download/v1.6.0/kubeone_1.6.0_linux_amd64.zip"
+        unzip kubeone_1.6.0_linux_amd64.zip -d kubeone_1.6.0_linux_amd64
+        sudo mv kubeone_1.6.0_linux_amd64/kubeone /usr/local/bin
+        curl -LO "https://get.helm.sh/helm-v3.10.3-linux-amd64.tar.gz"
+        tar -xzvf helm-v3.10.3-linux-amd64.tar.gz linux-amd64/helm
+        sudo mv linux-amd64/helm /usr/local/bin
 
     - name: Run Terraform
       if: github.ref == 'refs/heads/master'
