--- a/kubeone.yaml
+++ b/kubeone.yaml
@@ -25,6 +25,8 @@ addons: # https://docs.kubermatic.com/kubeone/v1.6/guides/addons/
   addons: # https://github.com/kubermatic/kubeone/tree/release/v1.6/addons
   - name: cluster-autoscaler
   - name: csi-vmware-cloud-director
+    params:
+      clusterid: NO_RDE_kubeone
   - name: default-storage-class
     params:
       storageProfile: Ultra Fast Storage A # adjust to a storage profile of your choice, see "VCD UI -> Data Centers -> Storage -> Storage Policies"
