--- a/kubeone.yaml
+++ b/kubeone.yaml
@@ -24,10 +24,11 @@ addons: # https://docs.kubermatic.com/kubeone/v1.6/guides/addons/
   path: ./addons
   addons: # https://github.com/kubermatic/kubeone/tree/release/v1.6/addons
   - name: cluster-autoscaler
-  - name: csi-vmware-cloud-director
-    params:
-      clusterid: NO_RDE_kubeone
-  - name: default-storage-class
-    params:
-      storageProfile: Ultra Fast Storage A # adjust to a storage profile of your choice, see "VCD UI -> Data Centers -> Storage -> Storage Policies"
   - name: unattended-upgrades
+  ## vCloud-CSI disabled by default. Uncomment to enable, but consult README.md first for caveats!
+  # - name: csi-vmware-cloud-director
+  #   params:
+  #     clusterid: NO_RDE_kubeone
+  # - name: default-storage-class
+  #   params:
+  #     storageProfile: Ultra Fast Storage A # adjust to a storage profile of your choice, see "VCD UI -> Data Centers -> Storage -> Storage Policies"
