--- a/deployments/wireguard/templates/secret.yaml
+++ b/deployments/wireguard/templates/secret.yaml
@@ -12,7 +12,11 @@ stringData:
   wg0.conf: |
     # server
     [Interface]
+    {{- if .Values.wireguard.serverAddress }}
     Address = {{ .Values.wireguard.serverAddress }}
+    {{- else }}
+    Address = 10.242.42.1/24
+    {{- end }}
     ListenPort = 51820
     PrivateKey = {{ .Values.wireguard.privateKey }}
     PostUp = iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o eth+ -j MASQUERADE
@@ -22,11 +26,15 @@ stringData:
     SaveConfig = false
 
     # clients
-    {{- range .Values.wireguard.clients }}
+    {{- range $idx, $client := .Values.wireguard.clients }}
     [Peer]
-    {{- if .name }}
-    # name = {{ .name }}
+    {{- if $client.name }}
+    # name = {{ $client.name }}
     {{- end }}
-    PublicKey = {{ .publicKey }}
-    AllowedIPs = {{ .allowedIPs }}
+    PublicKey = {{ $client.publicKey }}
+    {{- if $client.allowedIPs }}
+    AllowedIPs = {{ $client.allowedIPs }}
+    {{- else }}
+    10.242.42.{{ add $idx 10 }}/32
+    {{- end }}
     {{- end }}
