fix AllowedIPs templating

--- a/deployments/wireguard/templates/secret.yaml
+++ b/deployments/wireguard/templates/secret.yaml
@@ -35,6 +35,6 @@ stringData:
     {{- if $client.allowedIPs }}
     AllowedIPs = {{ $client.allowedIPs }}
     {{- else }}
-    10.242.42.{{ add $idx 10 }}/32
+    AllowedIPs = 10.242.42.{{ add $idx 10 }}/32
     {{- end }}
     {{- end }}
